[gd_scene load_steps=2 format=2]

[ext_resource path="res://addons/state_machine/state_graph_node.gd" type="Script" id=1]

[node name="StateGraphNode" type="GraphNode"]
margin_right = 210.0
margin_bottom = 161.0
show_close = true
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color( 1, 1, 1, 1 )
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 1 )

[node name="DeletionDialog" type="ConfirmationDialog" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 216.0
margin_bottom = 94.0
dialog_text = "Delete this State?"
dialog_autowrap = true

[connection signal="close_request" from="." to="." method="_on_close_request"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="confirmed" from="DeletionDialog" to="." method="_on_deletion_confirmed"]
